selfhost/test/typechecker/import/error_duplicate_variable_name.2.out
Error at %FILE_NAME%:3:6
Duplicate name 'a'
  |  func a() {}
          ^
This name is also declared at (1:8)
  |  import a from "./_exports"
            ^
